# xiaohongshu-ai-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_commands.py  run_dashboard.py  run_full_gateway.py  run_gateway.py  run_server.py  start.sh  xiaohongshu  配置指南.md
.git.backup/: COMMIT_EDITMSG  config  index  index 2  index 3
config/: .env.example
src/: __init__.py  agent.py  cli.py  computer_control.py  config.py  config_manager.py  database.py  enhanced_agent.py  llm_adapter.py  rag.py  security.py  setup.py  terminal.py
tests/: conftest.py  test_api_key_validator.py  test_chat_usecase.py  test_config_loader.py  test_knowledge.py  test_prompts.py
xhs_automation/xhs/: cdp.py
xiaohongshu_agent/: __init__.py  __main__.py
xiaohongshu_agent/agent/: __init__.py  context.py  loop.py  memory.py
xiaohongshu_agent/apps/: __init__.py
xiaohongshu_agent/bootstrap/: __init__.py  build_agent.py
xiaohongshu_agent/channels/: __init__.py  xiaohongshu.py
xiaohongshu_agent/cli/: __init__.py  commands.py  video_commands.py
xiaohongshu_agent/config/: __init__.py  api_key_validator.py  loader.py  validator.py
xiaohongshu_agent/domain/: __init__.py  models.py
xiaohongshu_agent/gateway/: __init__.py  commands.py  types.py
xiaohongshu_agent/integrations/: __init__.py
xiaohongshu_agent/providers/: __init__.py  anthropic.py  base.py  deepseek.py  doubao.py  gemini.py  kimi.py  minimax.py  openai.py  qwen.py  retry.py  spark.py  tencent.py  zhipu.py
xiaohongshu_agent/services/: __init__.py  chat.py  content.py  prompts.py  publish.py  search.py  (+1 more)
(+58 files in other folders)
