[project]
name = "xiaohongshu-agent"
version = "1.1.0"
description = "小红书 AI Agent - 自动化运营工具"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Eric Hong"}
]
keywords = ["xiaohongshu", "agent", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0",
    "rich>=14.0.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
xhs = "xiaohongshu_agent.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xiaohongshu_agent"]

[tool.hatch.build.targets.wheel.sources]
"xiaohongshu_agent" = "xiaohongshu_agent"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
